--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,92 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saúde Conectada MA</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-      color: #333;
-    }
-    header {
-      background-color: #d90000;
-      color: white;
-      padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-    header h1 {
-      margin: 0;
-    }
-    nav button {
-      background: none;
-      border: none;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      margin: 0 8px;
-    }
-    nav button.active {
-      text-decoration: underline;
-    }
-    main {
-      padding: 1rem;
-    }
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 1rem;
-    }
-    .card {
-      border: 2px solid #d90000;
-      border-radius: 10px;
-      padding: 1rem;
-      text-align: center;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-    .card:hover {
-      transform: scale(1.03);
-      background-color: #f9f9f9;
-    }
-    textarea, input[type="text"] {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.3rem;
-      margin-bottom: 1rem;
-    }
-    button.enviar {
-      background-color: #d90000;
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .mensagem {
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #f1f1f1;
-      border-top: 2px solid #d90000;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
   <header>
-    <h1>Saúde Conectada MA</h1>
+    <h1><i class="fas fa-heartbeat"></i> Saúde Conectada MA</h1>
     <nav>
-      <button onclick="navegar('home')" id="btn-home">Início</button>
-      <button onclick="navegar('triagem')">Triagem</button>
-      <button onclick="navegar('pesquisa')">Pesquisa</button>
-      <button onclick="navegar('dashboard')">Dashboard</button>
-      <button onclick="navegar('orientacoes')">Orientações</button>
+      <button onclick="navegar('home')" id="btn-home" class="active tooltip">
+        <i class="fas fa-home"></i> Início
+        <span class="tooltiptext">Página inicial</span>
+      </button>
+      <button onclick="navegar('triagem')" class="tooltip">
+        <i class="fas fa-stethoscope"></i> Triagem
+        <span class="tooltiptext">Triagem médica</span>
+      </button>
+      <button onclick="navegar('pesquisa')" class="tooltip">
+        <i class="fas fa-clipboard-check"></i> Pesquisa
+        <span class="tooltiptext">Pesquisa de satisfação</span>
+      </button>
+      <button onclick="navegar('dashboard')" class="tooltip">
+        <i class="fas fa-chart-line"></i> Dashboard
+        <span class="tooltiptext">Dados da saúde</span>
+      </button>
+      <button onclick="navegar('orientacoes')" class="tooltip">
+        <i class="fas fa-info-circle"></i> Orientações
+        <span class="tooltiptext">Informações úteis</span>
+      </button>
     </nav>
   </header>
   <main id="conteudo"></main>
@@ -97,109 +38,6 @@
     <strong>Saúde Conectada MA</strong><br/>
     © 2025 - Todos os direitos reservados.
   </footer>
-  <script>
-    const perguntasTriagem = [
-      "Você está com febre alta?",
-      "Está com dificuldade para respirar?",
-      "Está com dores no peito?",
-      "Tem histórico de doenças crônicas?",
-      "Está com vômitos ou diarreia?",
-      "Você está com tosse persistente?",
-      "Você teve contato com alguém doente recentemente?",
-      "Você sente cansaço extremo?",
-      "Você está com manchas pelo corpo?",
-      "Está com sangramento ou secreções anormais?"
-    ];
-
-    const perguntasPesquisa = [
-      "Você consegue agendar consultas online?",
-      "Você sente que os profissionais de saúde são atenciosos?",
-      "Você encontrou os medicamentos que precisava?",
-      "O tempo de espera foi razoável?",
-      "Você teve acesso fácil à unidade de saúde?",
-      "As instalações estavam limpas e organizadas?",
-      "Você recebeu orientações claras sobre seu tratamento?",
-      "Você foi atendido com respeito e cordialidade?",
-      "A equipe parecia bem treinada?",
-      "Você indicaria a unidade para outra pessoa?",
-      "Conseguiu realizar todos os exames solicitados?",
-      "As informações sobre horários e serviços estavam disponíveis?",
-      "Você teve facilidade em localizar a unidade?",
-      "As salas de espera eram confortáveis?",
-      "Você se sentiu seguro durante o atendimento?"
-    ];
-
-    function navegar(pagina) {
-      const conteudo = document.getElementById("conteudo");
-      let html = "";
-      if (pagina === "home") {
-        html = `
-          <h2 style="color:#d90000">Bem-vindo ao Saúde Conectada MA</h2>
-          <div class="cards">
-            <div class="card" onclick="navegar('triagem')">Triagem Médica</div>
-            <div class="card" onclick="navegar('pesquisa')">Pesquisa de Satisfação</div>
-            <div class="card" onclick="navegar('dashboard')">Dashboard</div>
-            <div class="card" onclick="navegar('orientacoes')">Orientações</div>
-          </div>
-        `;
-      } else if (pagina === "triagem") {
-        html = `<h2 style='color:#d90000'>Triagem Médica</h2>`;
-        perguntasTriagem.forEach((p, i) => {
-          html += `<label>${p}</label><textarea id='t${i}'></textarea>`;
-        });
-        html += `<button class='enviar' onclick='enviarForm("triagem", ${perguntasTriagem.length})'>Enviar Triagem</button><p id='msg'></p>`;
-      } else if (pagina === "pesquisa") {
-        html = `<h2 style='color:#d90000'>Pesquisa de Satisfação</h2>`;
-        perguntasPesquisa.forEach((p, i) => {
-          html += `<label>${p}</label><textarea id='p${i}'></textarea>`;
-        });
-        html += `<button class='enviar' onclick='enviarForm("pesquisa", ${perguntasPesquisa.length})'>Enviar Pesquisa</button><p id='msg'></p>`;
-      } else if (pagina === "dashboard") {
-        html = `
-          <h2 style='color:#d90000'>Dashboard - São Luís (MA)</h2>
-          <ul>
-            <li><strong>População estimada:</strong> 1.100.000</li>
-            <li><strong>IMAPI:</strong> 0,72</li>
-            <li><strong>UPAs e UBSs:</strong> 25</li>
-            <li><strong>Coleta de esgoto:</strong> 80%</li>
-            <li><strong>Médicos por 100 mil hab.:</strong> 295</li>
-            <li><strong>Enfermeiros por 100 mil hab.:</strong> 216</li>
-          </ul>`;
-      } else if (pagina === "orientacoes") {
-        html = `
-          <h2 style='color:#d90000'>Orientações e Números de Emergência</h2>
-          <ul>
-            <li><strong>SAMU:</strong> 192</li>
-            <li><strong>Bombeiros:</strong> 193</li>
-            <li><strong>Polícia:</strong> 190</li>
-            <li><strong>Vigilância Sanitária:</strong> (98) 3218-9131</li>
-          </ul>
-          <p>Para mais orientações, acesse: <a href='https://www.saude.ma.gov.br' target='_blank'>saude.ma.gov.br</a></p>
-        `;
-      }
-      conteudo.innerHTML = html;
-    }
-
-    function enviarForm(tipo, qtd) {
-      let todasPreenchidas = true;
-      for (let i = 0; i < qtd; i++) {
-        const campo = document.getElementById((tipo === 'triagem' ? 't' : 'p') + i);
-        if (!campo.value.trim()) {
-          todasPreenchidas = false;
-          break;
-        }
-      }
-      const msg = document.getElementById("msg");
-      if (!todasPreenchidas) {
-        msg.innerText = "Por favor, responda todas as perguntas.";
-        msg.style.color = "red";
-      } else {
-        msg.innerText = "Respostas enviadas com sucesso! Obrigado.";
-        msg.style.color = "green";
-      }
-    }
-
-    window.onload = () => navegar("home");
-  </script>
+  <script src="js/main.js"></script>
 </body>
 </html>
