--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,5 +39,6 @@
     © 2025 - Todos os direitos reservados.
   </footer>
   <script src="js/main.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
