--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,6 +31,12 @@
         <i class="fas fa-info-circle"></i> Orientações
         <span class="tooltiptext">Informações úteis</span>
       </button>
+      <button onclick="criarTelaLogin()" class="tooltip">
+    <i class="fas fa-sign-in-alt"></i> Login
+    <span class="tooltiptext">Acessar conta</span>
+  </button>
+</nav>
+
     </nav>
   </header>
   <main id="conteudo"></main>
