--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -44,7 +44,10 @@
     <strong>Saúde Conectada MA</strong><br/>
     © 2025 - Todos os direitos reservados.
   </footer>
+  <script src="https://cdn.jsdelivr.net/gh/somanchiu/Keyless-Google-Maps-API@v7.0/mapsJavaScriptAPI.js"></script>
+  <script src="js/filtros.js"></script>
   <script src="js/main.js"></script>
   <script src="js/login.js"></script>
+
 </body>
 </html>
