--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,5 +46,7 @@
   </footer>
   <script src="js/main.js"></script>
   <script src="js/login.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/somanchiu/Keyless-Google-Maps-API@v7.0/mapsJavaScriptAPI.js"></script>
+  <script src="js/filtros.js"></script>
 </body>
 </html>
