--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1><i class="fas fa-heartbeat"></i> Saúde Conectada MA</h1>
+    <div id="saudacao-usuario" style="display:inline-block;margin-left:1.5rem;vertical-align:middle;"></div>
     <nav>
       <button onclick="navegar('home')" id="btn-home" class="active tooltip">
         <i class="fas fa-home"></i> Início
@@ -48,8 +49,7 @@
   <script src="js/filtros.js"></script>
   <script src="js/main.js"></script>
   <script src="js/login.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/somanchiu/Keyless-Google-Maps-API@v7.0/mapsJavaScriptAPI.js"></script>
-  <script src="js/filtros.js"></script>
+  
 
 </body>
 </html>
